--- a/Bibdle Front/package.json
+++ b/Bibdle Front/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.9.5",
     "react-select": "^5.10.0",
     "tailwindcss": "^4.0.14"
   },
